# RAG-Retrieval-Augmented-Generation

./: .gitignore  README.md  chatbot_history.txt  pyproject.toml  requirements.txt
1-2)LLMInteraction/: chatbot.py  chatmodel_gemini.py  chatprompttemplate.py  messageplaceholder.py
10)TextSplitters/: character_text_splitter.py  code_splitter.py
11)VectorStore/: vector_store.py
12)Retrievers/: vector_store_retriever.py  wikiepedia_retriever.py
13)Tools/: enforced_tool_execution.py  simple_tools.py  structured_tool.py  test_multiple_toolcalls.py  tool_binding.py  tool_kit.py
14)Langraph/: basic_graph.ipynb  complex_conditional_graph.ipynb  conditional_graph.ipynb  number_game.ipynb  omplex_graph.ipynb
3)StructuredOutputs/: detailed_output_structure.py  pydantic_structured_output.py  structuredoutput.py
4)OutputParsers/: pydantic_output_parser.py
5)chains/: parallel_chain.py  sequentialchain.py  simple_llm_chain.py
6)Embeddings/: hugging_face_embeddings.py  introduction.txt
7)BasicRAG/: basic_rag.py
8)Runnables/: runnable_parallel.py
9)DocumentLoaders/: csv_loader.py  directory_loader.py  text_loader.py  web_base_loader.py
Advanced_rag/: pyproject.toml  rag.ipynb  requirements.txt
Corrective Rag/: 1_basic_rag.ipynb  2_retrieval_refinement.ipynb  3_retrieval_evaluator.ipynb  4_web_search_refinement.ipynb.ipynb  5_query_rewrite.ipynb  6_ambiguous.ipynb
DocumentLoaders/: pypdf_loader.py
LLMInteraction/: chatprompttemplate.py  messageplaceholder.py
OutputParsers/: separate_template_only.py  stroutputparsers.py  structured_output_parser.py
(+18 files in other folders)
