[project]
name = "rag-retrieval-augmented-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.9",
    "logging>=0.4.9.6",
    "pydantic>=2.12.5",
    "pypdf>=6.7.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]
